instance.tf
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_instance" "tcb_blog_ec2" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t2.micro"
  key_name = "terraform" # Insira o nome da chave criada antes.
  #vpc_security_group_ids = [aws_security_group.permitir_ssh_http.id]
  associate_public_ip_address = true


  
  subnet_id = "${aws_subnet.matte-subnet-public-1.id}"
  vpc_security_group_ids = ["${aws_security_group.ssh-allowed.id}"]

  tags = {
    Name = "blogserver01"
 # Insira o nome da instância de sua preferência.
  }
}

#variable "tcb_blog_vpc_id" {
#  default = "vpc-044a05c74d46127b6" # Orientações para copia da VPC ID abaixo.
#}

#variable "tcb_blog_subnet_public_id" {
#  default = "subnet-0f001d93c9e954103" # Orientações para copia da Subnet ID abaixo.
#}


#resource "aws_security_group" "permitir_ssh_http" {
#  name        = "permitir_ssh"
#  description = "Permite SSH e HTTP na instancia EC2"
#  vpc_id      = var.tcb_blog_vpc_id

#  ingress {
#    description = "SSH to EC2"
#    from_port   = 22
#    to_port     = 22
#    protocol    = "tcp"
#    cidr_blocks = ["0.0.0.0/0"]
#  }

#  ingress {
#    description = "HTTP to EC2"
#    from_port   = 80
#    to_port     = 80
#    protocol    = "tcp"
#    cidr_blocks = ["0.0.0.0/0"]
#  }

#  egress {
#    from_port   = 0
#    to_port     = 0
#    protocol    = "-1"
#    cidr_blocks = ["0.0.0.0/0"]
#  }

#  tags = {
#    Name = "permitir_ssh_e_http"
#  }
#}
